<resources>
    <string name="app_name">TriviaRevision16</string>
    <string name="title_text">Trivia</string>
    <string name="Question_out_of">Question 49/50</string>
    <string name="true_button_text">True</string>
    <string name="false_button_text">False</string>
    <string name="next_button_text">Next</string>
    <string name="placeholder">Hello , here is the place where we are going to add actual questions</string>
    <string name="text_formatted">Question %d/%d</string>
    <string name="Correct">Correct answer</string>
    <string name="Incorrect">Oops Incorrect answer!</string>
    <string name="high_score_text">High Score</string>
    <string name="current_score_text">Your Score</string>
    <string name="high_score_value">High score: %d</string>
    <string name="current_score">Current Score :%d</string>
</resources>